@@ -471,6 +471,17 @@ struct lrouter_group {
     struct hmapx tmp_ha_ref_chassis;
 };
 
+static inline bool
+set_enable_statelless_acl_lb(const struct nbrec_logical_switch *nbs)
+{
+    if (!nbs) {
+        return false;
+    }
+
+    return smap_get_bool(&nbs->other_config,
+            "enable-stateless-acl-lb", false);
+}
+
 static struct ovn_datapath *
 ovn_datapath_create(struct hmap *datapaths, const struct uuid *key,
                     const struct nbrec_logical_switch *nbs,
@@ -944,7 +955,7 @@ join_datapaths(const struct nbrec_logical_switch_table *nbrec_ls_table,
 
         init_ipam_info_for_datapath(od);
         init_mcast_info_for_datapath(od);
-
+        od->enable_stateless = set_enable_statelless_acl_lb(nbs);
         if (smap_get_bool(&nbs->other_config, "ic-vxlan_mode", false)) {
             vxlan_ic_mode = true;
         }
@@ -3877,6 +3888,10 @@ build_lb_datapaths(const struct hmap *lbs, const struct hmap *lb_groups,
             lb_dps = ovn_lb_datapaths_find(lb_datapaths_map, lb_uuid);
             ovs_assert(lb_dps);
             ovn_lb_datapaths_add_ls(lb_dps, 1, &od);
+
+            if (od->enable_stateless) {
+                lb_dps->enable_stateless_dp = true;
+            }
         }
 
         for (size_t i = 0; i < od->nbs->n_load_balancer_group; i++) {
@@ -5397,6 +5412,10 @@ northd_handle_lb_data_changes(struct tracked_lb_data *trk_lb_data,
             ovs_assert(lb_dps);
             ovn_lb_datapaths_add_ls(lb_dps, 1, &od);
 
+            if (od->enable_stateless) {
+                lb_dps->enable_stateless_dp = true;
+            }
+
             /* Add the lb to the northd tracked data. */
             hmapx_add(&nd_changes->trk_lbs.crupdated, lb_dps);
         }
@@ -5939,7 +5958,7 @@ build_stateless_filter(const struct ovn_datapath *od,
                                 action,
                                 &acl->header_,
                                 lflow_ref);
-    } else {
+    } else if (!od->enable_stateless) {
         ovn_lflow_add_with_hint(lflows, od, S_SWITCH_OUT_PRE_ACL,
                                 acl->priority + OVN_ACL_PRI_OFFSET,
                                 acl->match,
@@ -7502,8 +7521,14 @@ build_acls(const struct ls_stateful_record *ls_stateful_rec,
          *
          * This is enforced at a higher priority than ACLs can be defined. */
         ds_clear(&match);
-        ds_put_format(&match, "%s(ct.est && ct.rpl && ct_mark.blocked == 1)",
-                      use_ct_inv_match ? "ct.inv || " : "");
+
+        if (use_ct_inv_match && !od->enable_stateless) {
+            ds_put_cstr(&match, "ct.inv || (ct.est && ct.rpl && "
+                                "ct_mark.blocked == 1)");
+        } else {
+            ds_put_cstr(&match, "(ct.est && ct.rpl && ct_mark.blocked == 1)");
+        }
+
         ovn_lflow_add(lflows, od, S_SWITCH_IN_ACL_EVAL, UINT16_MAX - 3,
                       ds_cstr(&match), REGBIT_ACL_VERDICT_DROP " = 1; next;",
                       lflow_ref);
@@ -7797,8 +7822,13 @@ build_lb_rules_pre_stateful(struct lflow_table *lflows,
         }
         ds_put_cstr(action, "ct_lb_mark;");
 
-        ds_put_format(match, REGBIT_CONNTRACK_NAT" == 1 && %s.dst == %s",
-                      ip_match, lb_vip->vip_str);
+        if (!lb_dps->enable_stateless_dp) {
+            ds_put_format(match, REGBIT_CONNTRACK_NAT" == 1 && %s.dst == %s",
+                          ip_match, lb_vip->vip_str);
+        } else {
+            ds_put_format(match, "%s.dst == %s", ip_match, lb_vip->vip_str);
+        }
+
         if (lb_vip->port_str) {
             ds_put_format(match, " && %s.dst == %s", lb->proto,
                           lb_vip->port_str);
@@ -7808,6 +7838,25 @@ build_lb_rules_pre_stateful(struct lflow_table *lflows,
             lflows, lb_dps->nb_ls_map, ods_size(ls_datapaths),
             S_SWITCH_IN_PRE_STATEFUL, 120, ds_cstr(match), ds_cstr(action),
             &lb->nlb->header_, lb_dps->lflow_ref);
+
+        /* Pass all VIP traffic to the conntrack to support load balancers
+           in the case of stateless acl. */
+        if (lb_dps->enable_stateless_dp &&
+            (lb_vip->hairpin_snat_ip || lb_vip->port_str)) {
+            ds_clear(action);
+            ds_clear(match);
+
+            ds_put_format(match, "%s && %s.dst == %s", lb->proto, ip_match,
+                          lb_vip->hairpin_snat_ip ? lb_vip->hairpin_snat_ip
+                          : lb_vip->vip_str);
+
+            ds_put_cstr(action, "ct_lb_mark;");
+
+            ovn_lflow_add_with_dp_group(
+                lflows, lb_dps->nb_ls_map, ods_size(ls_datapaths),
+                S_SWITCH_IN_PRE_STATEFUL, 105, ds_cstr(match), ds_cstr(action),
+                &lb->nlb->header_, lb_dps->lflow_ref);
+        }
     }
 }
 
